applications/keycloak/instance/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak
spec:
  to:
    kind: Service
    name: keycloak-service
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
